fixed some spacing issues with social links

--- a/src/Home/components/Profile/profile.css
+++ b/src/Home/components/Profile/profile.css
@@ -4,6 +4,15 @@
 .RCTopPadding {
     padding-top: 15px !important;
 }
+
 .RCSpace-5 {
     padding-top: 5px !important;
+}
+
+.RCMarginBottom {
+    margin-bottom: 0 !important;
+}
+
+.RCMarginTop {
+    margin-top: 0 !important;
 }
